# Diploma

./: .gitignore  Dockerfile
src/: Makefile
src/FilterDriver/: AttachDetach.c  FilterDriver.inf  IrpDispatch.c  Vector.c
src/HookService/: ConfigUpdater.cpp  ConfigUpdater.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h  driver_utils.cpp  driver_utils.h  pch.h  service.cpp
src/SHSFSFilterDriver/: FastIo.c  FsFilter.h  IrpDispatch.c  Main.c  SHSFSFilterDriver.inf  Vector.h
src/SHSVirtualEncryptedDisk/: SHSVirtualEncryptedDisk.inf
src/SHSVirtualEncryptedDisk/SRC/: MountManager.h  main.c  pch.h
src/Server/: CMakeLists.txt  DataBase.cpp  DataBase.h  DataBaseMock.cpp  DataBaseMock.h  Makefile  PostDataParser.cpp  PostDataParser.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  main.cpp  pch.h  utils.cpp  utils.h
src/VirtualDisk/SRC/: IRP.c  IRP.h  MountManager.c
